<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyAppPortfolio"
    android:background="#ff9773">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/my_title"
        android:id="@+id/textView"
        android:textSize="26sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000d" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:onClick="sendMessage"
        android:textColor="#00ffbf"
        android:background="#ff2120" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:textColor="#00ffbf"
        android:background="#ff2120"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:textColor="#00ffbf"
        android:background="#ff2120"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:textColor="#00ffbf"
        android:background="#ff2120"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/XYZ_Reader"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:textColor="#00ffbf"
        android:background="#ff2120"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/capstone_app"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:textColor="#00ffbf"
        android:background="#ff6a18"
        android:onClick="sendMessage" />
</RelativeLayout>
